--- a/templates/collab websites/highlander.html
+++ b/templates/collab websites/highlander.html
@@ -1,38 +1,50 @@
 {% extends "layout.html" %}
 
 {% block title %}| Collaborations{% endblock %}
-{% block extra_css %} 
-                <link href="/static/css/body.css" rel="stylesheet">
+{% block extra_css %}
+<link href="/static/css/body.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 <!--- Subnavigation page for displaying project --->
-    <div class="bio-container">
-        <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/KaJjkarMH6c?si=5TBXyoeuciBl_YaP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <div class="bio-text" style="text-align:left;">
-            <h2 style="text-align:left;">MATCHA</h2>
-            <p>“Yasssssss, I’m finally back bro. Ohh look at that booty, didn’t expect it to be so big, my hair slays too. Wow, never happy to be a girl like now!”
-            </p>
-            <p>
-                An intimate friendship between two kindred spirits of Mike and Colleen was suddenly ruined, boiling down to an uneventful dispute about a rather petty subject. Full of hatred, Colleen herself made up a fiction with devastating occurrences to Mike. As a supernatural incident happened, Colleen had a chance to find her deepest sympathies with the incessant ups and downs in Mike’s life, changing her very perception of him and propelling her to make up with him. Yet even after becoming reconciled, they encountered arbitrary and tragic occurrences that make their own existence at stake…</p>
-        </div>
-
-        <div></div>
+<div class="bio-container">
+    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/KaJjkarMH6c?si=5TBXyoeuciBl_YaP"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <div class="bio-text" style="text-align:left;">
+        <h2 style="text-align:left;">MATCHA</h2>
+        <p>“Yasssssss, I’m finally back bro. Ohh look at that booty, didn’t expect it to be so big, my hair slays too.
+            Wow, never happy to be a girl like now!”
+        </p>
+        <p>
+            An intimate friendship between two kindred spirits of Mike and Colleen was suddenly ruined, boiling down to
+            an uneventful dispute about a rather petty subject. Full of hatred, Colleen herself made up a fiction with
+            devastating occurrences to Mike. As a supernatural incident happened, Colleen had a chance to find her
+            deepest sympathies with the incessant ups and downs in Mike’s life, changing her very perception of him and
+            propelling her to make up with him. Yet even after becoming reconciled, they encountered arbitrary and
+            tragic occurrences that make their own existence at stake…</p>
     </div>
-    <div class="bio-container">
-        <div></div>
-        <image class="bio-image" style="filter:grayscale(0)" src="../static/asset/images/art direction/poster.jpg"></image>
-        <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/cqjCkyhlPkM?si=Y71W9A6Z8yVQtYVL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-    </div>
+    <div></div>
+</div>
+<div class="bio-container">
+    <div></div>
+    <image class="bio-image" style="filter:grayscale(0)" src="../static/asset/images/art direction/poster.jpg"></image>
+    <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/cqjCkyhlPkM?si=Y71W9A6Z8yVQtYVL"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+</div>
 
 {% endblock %}
 {% block footer %}
-    <a href="https://www.instagram.com/chuoichuoibuoibuoi/" target="_blank" style="text-decoration: none">
-        <img src="../static/asset/images/other/ig.png" alt="Instagram" class="contact-logo">
-    </a>
+<a href="https://www.instagram.com/chuoichuoibuoibuoi/" target="_blank" style="text-decoration: none">
+    <img src="../static/asset/images/other/ig.png" alt="Instagram" class="contact-logo">
+</a>
 
-    <a href="mailto:nhomchuoicec@gmail.com" target="_blank" style="text-decoration: none">
-        <img src="../static/asset/images/other/mail.png" alt="Gmail" class="contact-logo">
-    </a>
+<a href="mailto:nhomchuoicec@gmail.com" target="_blank" style="text-decoration: none">
+    <img src="../static/asset/images/other/mail.png" alt="Gmail" class="contact-logo">
+</a>
 {% endblock %}
