--- a/templates/collab websites/recit.html
+++ b/templates/collab websites/recit.html
@@ -1,41 +1,49 @@
 {% extends "layout.html" %}
 
 {% block title %}| Collaborations{% endblock %}
-{% block extra_css %} 
-                <link href="/static/css/body.css" rel="stylesheet">
+{% block extra_css %}
+<link href="/static/css/body.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 <!--- Subnavigation page for displaying project --->
-    <div class="bio-container">
+<div class="bio-container">
 
     <!-- Embedded film on the left -->
-        <iframe class="video" src="https://drive.google.com/file/d/1CsplL9OtJk5-JYb_Mf8M-UASSZJsbVxD/preview" width="640" height="480" allow="autoplay"></iframe>
-        <div class="bio-text" style="text-align:left;">
-            <h2>WITHIN THE UNSEEN DREAM.</h2>
-            <h2>GIỮA CƠN MƠ VÔ HÌNH</h2>
-            <p>Ngày hôm ấy, bố dạy con những động tác võ ở phía sân sau, trông con như thể một chiến sĩ nhỏ! Ngày hôm ấy, mẹ cầm tay con đi về dọc con đường đê sau ngày dài trên trường mẫu giáo. Ngày hôm ấy, gia đình chúng ta cùng ngồi bên nhau, thưởng thức mâm cơm đầm ấm với những món ăn dân dã mẹ làm, như là rau muống chấm nước mắm, là đậu rán, là bát cà muối ăn cùng cơm.
-                Ấy vậy mà, con nhận ra, tất cả cũng chỉ là “Ngày hôm ấy”... Giá như, con có thể thay đổi một chữ cái, “ấy” thành “nay”.
-                Có lẽ, kí ức vốn sẽ giữ nguyên ý nghĩa, mà con chẳng thể dùng sức mạnh để biến nó thành hai chữ “hiện thực”. Nhưng giờ đây, con nhận ra điều quan trọng hơn cả - ta cần đón nhận và sống vì những hạnh phúc của thực tại và tương lai.
-            </p>
-            <p>
-                Bộ phim ngắn “Giữa cơn mơ vô hình” chính thức công chiếu ngày 26.08.2023. Hãy theo dõi trang chủ Recít để cập nhật thông tin sớm nhất về buổi chiếu phim sắp tới!
-            </p>
-        </div>
-        <div></div>
+    <iframe class="video" src="https://drive.google.com/file/d/1CsplL9OtJk5-JYb_Mf8M-UASSZJsbVxD/preview" width="640"
+        height="480" allow="autoplay"></iframe>
+    <div class="bio-text" style="text-align:left;">
+        <h2>WITHIN THE UNSEEN DREAM.</h2>
+        <h2>GIỮA CƠN MƠ VÔ HÌNH</h2>
+        <p>Ngày hôm ấy, bố dạy con những động tác võ ở phía sân sau, trông con như thể một chiến sĩ nhỏ! Ngày hôm ấy, mẹ
+            cầm tay con đi về dọc con đường đê sau ngày dài trên trường mẫu giáo. Ngày hôm ấy, gia đình chúng ta cùng
+            ngồi bên nhau, thưởng thức mâm cơm đầm ấm với những món ăn dân dã mẹ làm, như là rau muống chấm nước mắm, là
+            đậu rán, là bát cà muối ăn cùng cơm.
+            Ấy vậy mà, con nhận ra, tất cả cũng chỉ là “Ngày hôm ấy”... Giá như, con có thể thay đổi một chữ cái, “ấy”
+            thành “nay”.
+            Có lẽ, kí ức vốn sẽ giữ nguyên ý nghĩa, mà con chẳng thể dùng sức mạnh để biến nó thành hai chữ “hiện thực”.
+            Nhưng giờ đây, con nhận ra điều quan trọng hơn cả - ta cần đón nhận và sống vì những hạnh phúc của thực tại
+            và tương lai.
+        </p>
+        <p>
+            Bộ phim ngắn “Giữa cơn mơ vô hình” chính thức công chiếu ngày 26.08.2023. Hãy theo dõi trang chủ Recít để
+            cập nhật thông tin sớm nhất về buổi chiếu phim sắp tới!
+        </p>
     </div>
+    <div></div>
+</div>
 {% endblock %}
 {% block footer %}
 <!-- Contact information for the studio -->
-    <a href="https://www.instagram.com/recit.stu/" target="_blank" style="text-decoration: none">
-        <img src="../static/asset/images/other/ig.png" alt="Instagram" class="contact-logo">
-    </a>
+<a href="https://www.instagram.com/recit.stu/" target="_blank" style="text-decoration: none">
+    <img src="../static/asset/images/other/ig.png" alt="Instagram" class="contact-logo">
+</a>
 
-    <a href="mailto:recitfilmmaking@gmail.com" target="_blank" style="text-decoration: none">
-        <img src="../static/asset/images/other/mail.png" alt="Gmail" class="contact-logo">
-    </a>
+<a href="mailto:recitfilmmaking@gmail.com" target="_blank" style="text-decoration: none">
+    <img src="../static/asset/images/other/mail.png" alt="Gmail" class="contact-logo">
+</a>
 
-    <a href="https://www.facebook.com/recit.stu" target="_blank" style="text-decoration: none">
-        <img src="../static/asset/images/other/fb.png" alt="Facebok" class="contact-logo">
-    </a>
+<a href="https://www.facebook.com/recit.stu" target="_blank" style="text-decoration: none">
+    <img src="../static/asset/images/other/fb.png" alt="Facebok" class="contact-logo">
+</a>
 {% endblock %}
