--- a/templates/personal websites/essays.html
+++ b/templates/personal websites/essays.html
@@ -1,20 +1,24 @@
 {% extends "layout.html" %}
 
 {% block title %}| Personal{% endblock %}
-{% block extra_css %} 
-                <link href="/static/css/body.css" rel="stylesheet">
+{% block extra_css %}
+<link href="/static/css/body.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 <!--- Subnavigation page for displaying project --->
-    <div class="bio-container">
-    <iframe src="https://drive.google.com/file/d/1D_7bmgec6CroKiH0azCarou7nZtob5TF/preview" width="640" height="480" allow="autoplay"></iframe>
-        <div class="bio-text" style="text-align:left;">
-            <h2 style="text-align:left;">Water Lilies (2007)</h2>
-            <p> Final project for Expository Writing 20: Queer Coming-of-Age Stories, where I explore a different view (is this pun?) on the gazes in Water Lilies - a 2007 film by Céline Sciamma.
-                <a class="com-footer" style="text-decoration: none; color: #888" href="https://drive.google.com/file/d/1W03tiTAPKdUYSD9uyvlVRNTHE0bA_Lpn/view">Read the original essay here!</a>
-            </p>
-        </div>
-        <div>  </div>
+<div class="bio-container">
+    <iframe src="https://drive.google.com/file/d/1D_7bmgec6CroKiH0azCarou7nZtob5TF/preview" width="640" height="480"
+        allow="autoplay"></iframe>
+    <div class="bio-text" style="text-align:left;">
+        <h2 style="text-align:left;">Water Lilies (2007)</h2>
+        <p> Final project for Expository Writing 20: Queer Coming-of-Age Stories, where I explore a different view (is
+            this pun?) on the gazes in Water Lilies - a 2007 film by Céline Sciamma.
+            <a class="com-footer" style="text-decoration: none; color: #888"
+                href="https://drive.google.com/file/d/1W03tiTAPKdUYSD9uyvlVRNTHE0bA_Lpn/view">Read the original essay
+                here!</a>
+        </p>
     </div>
+    <div> </div>
+</div>
 {% endblock %}
