--- a/templates/personal websites/fysemr.html
+++ b/templates/personal websites/fysemr.html
@@ -1,31 +1,32 @@
 {% extends "layout.html" %}
 
 {% block title %}| Personal{% endblock %}
-{% block extra_css %} 
-                <link href="/static/css/body.css" rel="stylesheet">
+{% block extra_css %}
+<link href="/static/css/body.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
 <!--- Subnavigation page for displaying project --->
-    <div class="bio-container">
-    <iframe src="https://drive.google.com/file/d/1HbtgJBMA1PF065dIGyaITdW0obwVOD39/preview" width="640" height="480" allow="autoplay"></iframe>
-        <div class="bio-text" style="text-align:left;">
-            <h2 style="text-align:left;">The Land of Rivers</h2>
-            <p>“Umi ni oite dai sakana nashi” (海に置いて大魚なし), 
-            </p>
-            <p>"In the sea, there are no big fish."
-            </p>
-        </div>
+<div class="bio-container">
+    <iframe src="https://drive.google.com/file/d/1HbtgJBMA1PF065dIGyaITdW0obwVOD39/preview" width="640" height="480"
+        allow="autoplay"></iframe>
+    <div class="bio-text" style="text-align:left;">
+        <h2 style="text-align:left;">The Land of Rivers</h2>
+        <p>“Umi ni oite dai sakana nashi” (海に置いて大魚なし),
+        </p>
+        <p>"In the sea, there are no big fish."
+        </p>
+    </div>
 
-        <div></div>
-    </div>
-    <div class="bio-container">
-        <image height="300px" src="../static/asset/images/fish/fish outline.jpg"></image>
-        <image height="300px" src="../static/asset/images/fish/no fish.jpg"></image>
-    </div>
-    <div class="bio-container">
-        <image height="300px" src="../static/asset/images/fish/no sub.jpg"></image>
-        <image height="300px" src="../static/asset/images/fish/full.jpg"></image>
-    </div>
+    <div></div>
+</div>
+<div class="bio-container">
+    <image height="300px" src="../static/asset/images/fish/fish outline.jpg"></image>
+    <image height="300px" src="../static/asset/images/fish/no fish.jpg"></image>
+</div>
+<div class="bio-container">
+    <image height="300px" src="../static/asset/images/fish/no sub.jpg"></image>
+    <image height="300px" src="../static/asset/images/fish/full.jpg"></image>
+</div>
 
 {% endblock %}
