--- a/templates/collab websites/recit.html
+++ b/templates/collab websites/recit.html
@@ -7,11 +7,46 @@
 
 {% block content %}
 <!--- Subnavigation page for displaying project --->
+
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v24.0&appId=403032677937765"></script>
+
+<div class="bio-container">
+    <div style="display: flex; justify-content: center;"></div>
+        <img height="200px" src="../static/asset/images/recit/recitbanner.jpg" alt="Recit Banner">
+    </div>
+</div>
+
+<div class="bio-container">
+    
+    <!-- Embedded film on the left -->
+    <div class="bio-text" style="text-align:left;">
+        <h2>RECÍT STUDIO</h2>
+        <p>Recít Studio is a student-run film production studio based in Hanoi, Vietnam. Founded in 2023 by a group of
+            creatively inspired high school students, Recít aims to create meaningful and impactful motion pictures that center
+            uniquely Vietnamese stories. The studio focuses on producing short films, documentaries, and experimental films that
+            explore social issues, human experiences, and cultural narratives. We also collaborated with high schools to produce
+            promotional videos and event coverage.
+        </p>
+    </div>
+    <img height="300px" src="../static/asset/images/recit/recitposter.jpg">
+</div>
+<!--         
+        <p>
+            Recít Studio has gained recognition for its innovative approach to filmmaking and its commitment to
+            storytelling. The studio has produced several award-winning films that have been showcased at various film
+            festivals and events both locally and internationally. Recít Studio also provides opportunities for young
+            filmmakers to collaborate, learn, and grow through workshops, mentorship programs, and film screenings.
+        </p>
+        <p>
+            With a dedicated team of filmmakers, writers, and artists, Recít Studio continues to push the boundaries of
+            storytelling and create films that inspire, provoke thought, and foster empathy. The studio's mission is to
+            use the power of cinema to connect people, spark conversations, and make a positive impact on society.
+        </p> -->
+
 <div class="bio-container">
 
-    <!-- Embedded film on the left -->
-    <iframe class="video" src="https://drive.google.com/file/d/1CsplL9OtJk5-JYb_Mf8M-UASSZJsbVxD/preview" width="640"
-        height="480" allow="autoplay"></iframe>
+    <div class="fb-video" data-href="https://www.facebook.com/reel/1439886723469884" data-width="500" data-show-text="false"></div>
     <div class="bio-text" style="text-align:left;">
         <h2>WITHIN THE UNSEEN DREAM.</h2>
         <h2>GIỮA CƠN MƠ VÔ HÌNH</h2>
