--- a/templates/about.html
+++ b/templates/about.html
@@ -73,13 +73,10 @@
             Vietnam Model UN, Recit Studio, and CNN English Club.
         </p>
         <p>
-            I am currently a freshman at Harvard College with undecided major declaration, but I am mainly looking into
-            a concentration in <a
-                href="https://seas.harvard.edu/electrical-engineering/bachelors-degree-electrical-engineering">Computer
-                and Electrical Engineering</a> and a secondary in <a
-                href="https://afvs.fas.harvard.edu/undergraduate-secondary-field">Art, Film, and Visual Studies</a>. I
-            am a part of <a href="https://hudc.carrd.co/">Harvard Undergraduate Design Collectives</a> and <a
-                href="https://www.hcapconference.org/">Harvard Undergraduate in Asia Program</a>.
+            I am currently a sophomore at Harvard College, concentrating in <a href="https://seas.harvard.edu/computer-science">Computer Science</a>
+            and <a href="https://afvs.fas.harvard.edu/">Art, Film, and Visual Studies</a> with a secondary in <a href="https://www.math.harvard.edu/">Mathematics</a>.
+            I am currently part of the Harvard Project for Asian and International Relations (HPAIR) and Tech 4 Social Good (T4SG). I am also affiliated with the
+            Harvard Undergraduate Design Collectives (HUDC), Harvard Alternative Investments, and the Office for the Arts.
         </p>
     </div>
     <!-- Pictures on the right side -->
