--- a/templates/collab websites/recit.html
+++ b/templates/collab websites/recit.html
@@ -12,12 +12,6 @@
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v24.0&appId=403032677937765"></script>
 
 <div class="bio-container">
-    <div style="display: flex; justify-content: center;"></div>
-        <img height="200px" src="../static/asset/images/recit/recitbanner.jpg" alt="Recit Banner">
-    </div>
-</div>
-
-<div class="bio-container">
     
     <!-- Embedded film on the left -->
     <div class="bio-text" style="text-align:left;">
@@ -29,7 +23,7 @@
             promotional videos and event coverage.
         </p>
     </div>
-    <img height="300px" src="../static/asset/images/recit/recitposter.jpg">
+    <img height="300px" src="../static/asset/images/recit/recitbanner.jpg" alt="Recit Banner">
 </div>
 <!--         
         <p>
@@ -46,7 +40,7 @@
 
 <div class="bio-container">
 
-    <div class="fb-video" data-href="https://www.facebook.com/reel/1439886723469884" data-width="500" data-show-text="false"></div>
+    <div class="fb-video" data-href="https://www.facebook.com/reel/1439886723469884" data-width="700" data-show-text="false" style="float: right; margin-left: 10vw;"></div>
     <div class="bio-text" style="text-align:left;">
         <h2>WITHIN THE UNSEEN DREAM.</h2>
         <h2>GIỮA CƠN MƠ VÔ HÌNH</h2>
