--- a/templates/about.html
+++ b/templates/about.html
@@ -54,7 +54,7 @@
 </script>
 <div class="bio-container">
     <!-- Picture on the left side -->
-    <img class="bio-image" src="../static/asset/images/other/Headshot_Chi Le.jpg" alt="biopic">
+    <img class="bio-image" src="../static/asset/images/other/Headshot_Chi Le.jpg" alt="biopic" style="margin-left:5vw;">
     <div class="bio-text">
         <h2>My name is Lê Tuệ Chi or Chi Le.</h2>
         <h2>I am a self-taught illustrator and graphic designer based in Cambridge, MA.</h2>
