--- a/templates/personal websites/fysemr.html
+++ b/templates/personal websites/fysemr.html
@@ -8,8 +8,12 @@
 {% block content %}
 <!--- Subnavigation page for displaying project --->
 <div class="bio-container">
-    <iframe src="https://drive.google.com/file/d/1HbtgJBMA1PF065dIGyaITdW0obwVOD39/preview" width="640" height="480"
-        allow="autoplay"></iframe>
+    <div style="display: flex; justify-content: center; margin-left: 25vw;">
+        <iframe src="https://drive.google.com/file/d/1HbtgJBMA1PF065dIGyaITdW0obwVOD39/preview" width="1000vw" height="500vh" allow="autoplay"></iframe>
+    </div>
+</div>
+<div class="bio-container">
+    <image height="300px" src="../static/asset/images/fish/fish outline.jpg"></image>
     <div class="bio-text" style="text-align:left;">
         <h2 style="text-align:left;">The Land of Rivers</h2>
         <p>“Umi ni oite dai sakana nashi” (海に置いて大魚なし),
@@ -17,11 +21,6 @@
         <p>"In the sea, there are no big fish."
         </p>
     </div>
-
-    <div></div>
-</div>
-<div class="bio-container">
-    <image height="300px" src="../static/asset/images/fish/fish outline.jpg"></image>
     <image height="300px" src="../static/asset/images/fish/no fish.jpg"></image>
 </div>
 <div class="bio-container">
