--- a/templates/personal websites/fysemr.html
+++ b/templates/personal websites/fysemr.html
@@ -8,8 +8,8 @@
 {% block content %}
 <!--- Subnavigation page for displaying project --->
 <div class="bio-container">
-    <div style="display: flex; justify-content: center; margin-left: 25vw;">
-        <iframe src="https://drive.google.com/file/d/1HbtgJBMA1PF065dIGyaITdW0obwVOD39/preview" width="1000vw" height="500vh" allow="autoplay"></iframe>
+    <div style="display: flex; justify-content: center; margin: auto; align-items: center; flex-direction: column;">
+        <iframe src="https://drive.google.com/file/d/1HbtgJBMA1PF065dIGyaITdW0obwVOD39/preview" width="1000vw" height="600vh" allow="autoplay"></iframe>
     </div>
 </div>
 <div class="bio-container">
